--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "node-example-applications",
+  "name": "node-sso-example-app",
   "version": "1.0.0",
-  "description": "Example applications showcasing the WorkOS suite of products.",
+  "description": "Example Node.js SSO App using WorkOS",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ."
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/workos/node-example-applications.git"
+  "author": "WorkOS",
+  "dependencies": {
+    "express": "^4.18.1",
+    "ejs": "^3.1.8",
+    "router": "^1.3.7",
+    "dotenv": "^16.0.1",
+    "@workos-inc/node": "^2.11.0",
+    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.2",
+    "http-errors": "~1.6.3"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/workos/node-example-applications/issues"
-  },
-  "homepage": "https://github.com/workos/node-example-applications#readme",
   "devDependencies": {
-    "eslint": "^8.17.0"
+    "nodemon": "^2.0.19"
   }
 }
